[gd_scene load_steps=2 format=2]

[ext_resource path="res://spine.gd" type="Script" id=1]

[node name="Spine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -39.0
margin_right = 39.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_mouse_exited"]
